[gd_scene load_steps=12 format=3 uid="uid://dyckmp0cy1s83"]

[ext_resource type="Script" path="res://enemy.gd" id="1_3p4ml"]
[ext_resource type="Texture2D" uid="uid://bhiu1tu4o4lxp" path="res://icon.svg" id="2_jo6ts"]
[ext_resource type="Texture2D" uid="uid://l7h5hn5184bh" path="res://sprites/hiena de frente andando 1.png" id="3_lrc8f"]
[ext_resource type="Texture2D" uid="uid://b247ltgj5rked" path="res://sprites/hiena de frente andando 2.png" id="4_kryaf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v4w2w"]
atlas = ExtResource("3_lrc8f")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7xo7"]
atlas = ExtResource("4_kryaf")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w56t"]
atlas = ExtResource("3_lrc8f")
region = Rect2(0, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_53mow"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4w2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7xo7")
}],
"loop": true,
"name": &"agressivo",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w56t")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_d63xa"]
radius = 350.0

[sub_resource type="SphereMesh" id="SphereMesh_4shq7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7s24t"]
size = Vector2(22.5162, 25.1191)

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_3p4ml")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0, 0.0431373, 1)
texture = ExtResource("2_jo6ts")

[node name="AnimatedSprite_enemy" type="AnimatedSprite2D" parent="."]
position = Vector2(20, 2)
scale = Vector2(3.8633, 1.12993)
sprite_frames = SubResource("SpriteFrames_53mow")
animation = &"agressivo"
frame_progress = 0.110628
offset = Vector2(-0.455, -11.19)

[node name="detec_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detec_zone"]
shape = SubResource("CircleShape2D_d63xa")

[node name="MeshInstance2D" type="MeshInstance2D" parent="detec_zone"]
modulate = Color(0.984314, 0, 0, 0.141176)
scale = Vector2(700, 700)
mesh = SubResource("SphereMesh_4shq7")

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(1.95099, 2.40558)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(2.98023e-08, 3.3256)
scale = Vector2(2.16259, 1.40668)
shape = SubResource("RectangleShape2D_7s24t")

[connection signal="body_entered" from="detec_zone" to="." method="_on_detec_zone_body_entered"]
[connection signal="body_exited" from="detec_zone" to="." method="_on_detec_zone_body_exited"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
